helm/cilium-1-14/cilium-security-patches.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cilium
  namespace: cilium
spec:
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/config: runtime/default
        container.apparmor.security.beta.kubernetes.io/mount-bpf-fs: runtime/default
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cilium-agent
          securityContext:
            allowPrivilegeEscalation: false
